--- a/partial.html
+++ b/partial.html
@@ -3,7 +3,7 @@
         <div class="generation_cell" ng-class="{alive:cell.alive}"></div>
     </div>
 </div>
-<button type="button" ng-click="createNewGeneration()">Create New Generation</button>
+<button type="button" ng-click="advanceGeneration()">Create New Generation</button>
 <button type="button" ng-click="init()">Start Over</button>
 <h2>Current Generation: {{currentGeneration}}</h2>
 <h3>Living cells: {{alive.length}}</h3>
